// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage.tsx should render correctly 1`] = `
<div>
  <h1>
    Home page
  </h1>
  <button
    onClick={[Function]}
  >
    Get
  </button>
  <div>
    <h2>
      Something went wrong.
    </h2>
    <details
      style={
        Object {
          "whiteSpace": "pre-wrap",
        }
      }
    >
      TypeError: Cannot read property 'map' of undefined
      <br />
      
    in Filters (created by HomePage)
    in ErrorBoundary (created by HomePage)
    in div (created by HomePage)
    in HomePage
    </details>
  </div>
</div>
`;

exports[`HomePage.tsx should render correctly 2`] = `
<div>
  <h1>
    Home page
  </h1>
  <button
    onClick={[Function]}
  >
    Get
  </button>
  <h3>
    Loading...
  </h3>
</div>
`;
